# aut-utility-token

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  token.config.example.json  token.config.localnet.example.json  tsconfig.json
docs/: dependency-risk-register.md  devnet-next.md  devnet-results.md  devnet-staking-smoke.json  index.html  localnet-results.md  mainnet-architecture.md  pre-mainnet-test-report.md  publishing-plan.md  readiness.md  security.md  staking-economics.md  validator-ops.md
programs/utility_staking/: Cargo.toml
programs/utility_staking/src/: lib.rs
public/: index.html
public/docs/: publishing-plan.md  research.md
scripts/: devnet-deploy.ps1  diagnose-process-launch.cjs  publish-github-pages.ps1  serve-public.ps1
src/: config.ts  create-devnet-wallet.ts  create-token.ts  devnet-staking-smoke.ts  keypair.ts  validate-config.ts
test/: config.test.ts  staking.integration.test.ts
